# progressive-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  FAQ.md  GOVERNANCE.md  HEARTBEAT.md  LICENSE  README.md  SECURITY.md  SUMMARY_1.md  SUMMARY_2.md  SUMMARY_3.md  SUPPORT.md  TROUBLESHOOTING.md  execute_simple_task.sh  install.bat  install.sh  pyproject.toml  requirements.txt  start_silent.vbs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: agent.toml  services.toml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CLI_SECURITY.md  CLI_SECURITY_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  MANIFESTO.md  PHASE1_CHECKLIST.md  PHILOSOPHY.md  PLAN.md  PRINCIPLES.md  ROADMAP.md  STATUS.md  STRATEGY.md  VALUES.md  VISION.md
prompts/: SELF_MAP.md  TOOLS.md
scripts/: check_all_keys.ps1  check_env.ps1  check_proxy.ps1  find_proxy.ps1  gen_avatar.py  gen_avatar_pillow.py  quick_proxy_check.ps1  reauth_proxy.ps1  refresh_proxy_token.py  restart_bot.ps1  restart_proxy.ps1  setup.py  setup_token_refresh_task.ps1  start.bat  start.sh  test_imports.py  test_news_fetch.py  test_news_radar.py  test_tts_debug.py  test_tts_video.py  test_weather.py
skills/ai_radar/: SKILL.md
skills/browser/: SKILL.md
skills/cli/: SKILL.md
skills/content/: SKILL.md
skills/crypto/: SKILL.md
skills/email/: SKILL.md
skills/files/: SKILL.md
skills/finance/: SKILL.md
skills/image_gen/: SKILL.md
skills/novaposhta/: SKILL.md
skills/obsidian/: SKILL.md
skills/scheduler/: SKILL.md
skills/skill_creator/: SKILL.md
skills/tts/: SKILL.md
skills/twitch/: SKILL.md
skills/weather/: SKILL.md
skills/web_search/: SKILL.md
skills/youtube/: SKILL.md
soul/: CONTACTS.md  OWNER.md  RULES.md  SOUL.md
soul/traits/: 00_action_rules.md  01_tone.md  02_character.md  03_anti_slop.md  04_output_format.md  05_honesty.md  06_initiative.md  07_speed.md  08_privacy.md  09_resourcefulness.md  10_adaptivity.md
src/: main.py  watchdog.py
src/channels/: base.py  telegram.py
src/core/: agent.py  config.py  cost_tracker.py  dispatcher.py  goals.py  heartbeat.py  llm.py  orchestrator.py  reliable.py  router.py  scheduler.py  self_improve.py  tools.py
src/memory/: embeddings.py  hybrid.py  keyword_search.py  manager.py  models.py  sqlite_store.py  vector_search.py
src/monitors/: crypto_monitor.py  email_monitor.py  monobank_monitor.py  morning_briefing_monitor.py  news_radar_monitor.py  novaposhta_monitor.py  subscription_monitor.py  tech_radar_monitor.py  twitch_monitor.py  youtube_monitor.py
src/skills/: executor.py  loader.py  registry.py
tests/: test_cli_security.py  test_config.py  test_contact_tool.py  test_core.py  test_files.py  test_memory.py  test_skills.py  test_smoke.py  test_telegram.py
(+53 files in other folders)
